update: vertebrate paleontology chapter and thanatotheristes paper

--- a/My Library.bib
+++ b/My Library.bib
@@ -429,6 +429,21 @@
   pagetotal = {480}
 }
 
+@online{bininda-emondsAllAnimalsAre2015,
+  type = {Monograph},
+  title = {All Animals Are Interesting : A {{Festschrift}} in Honour of {{Anthony P}}. {{Russell}}},
+  shorttitle = {All Animals Are Interesting},
+  author = {Bininda-Emonds, Olaf R. P. and Powell, G. Lawrence and Jamniczky, Heather A. and Bauer, Aaron M.},
+  date = {2015},
+  publisher = {{Bis-Verlag}},
+  url = {http://oops.uni-oldenburg.de/2571/},
+  urldate = {2023-06-08},
+  abstract = {This volume of original papers elebates the 40+ year career of Anthony Russell on the occasion of his retirement as professor at the University of Calgary, Canada. His collegial and collaborative approach to research is represented here by a sampling of the work of an international assemblage of current and former colleagues, graduate students, and postdoctoral fellows, all of whom have benefitted from his guidance over the past four decades. The collected papers cover a diverse suite of taxa, including extinct and extant "reptiles", birds, mammals, amphibians, and "invertebrates"; encompass a variety of perspectives ranging from the developmental to the ecological; and are underlain by a firm foundation in comparative morphology and phylogenetics.},
+  isbn = {9783814223247},
+  pagetotal = {521},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\A5RX8T7P\\Bininda-Emonds et al. - 2015 - All animals are interesting  a Festschrift in hon.pdf;C\:\\Users\\ericr\\Zotero\\storage\\HSKC2RCK\\Bininda-Emonds et al. - 2015 - All animals are interesting  a Festschrift in hon.pdf;C\:\\Users\\ericr\\Zotero\\storage\\HALPXV7C\\2571.html}
+}
+
 @article{bintiazizanRaschMeasurementModel2019,
   title = {Rasch Measurement Model: A Review of {{Bayesian}} Estimation for Estimating the Person and Item Parameters},
   shorttitle = {Rasch Measurement Model},
@@ -793,6 +808,25 @@
   langid = {english},
   keywords = {Palaeontology,Solid Earth sciences,To Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\JNX9AQEZ\\Brusatte and Carr - 2016 - The phylogeny and evolutionary history of tyrannos.pdf;C\:\\Users\\ericr\\Zotero\\storage\\H4CERHCX\\srep20252.html}
+}
+
+@article{brusattePhylogenyEvolutionaryHistory2016a,
+  title = {The Phylogeny and Evolutionary History of Tyrannosauroid Dinosaurs},
+  author = {Brusatte, Stephen L. and Carr, Thomas D.},
+  date = {2016-02-02},
+  journaltitle = {Scientific Reports},
+  shortjournal = {Sci Rep},
+  volume = {6},
+  number = {1},
+  pages = {20252},
+  issn = {2045-2322},
+  doi = {10.1038/srep20252},
+  url = {https://www.nature.com/articles/srep20252},
+  urldate = {2023-06-08},
+  abstract = {Abstract                            Tyrannosauroids—the group of carnivores including               Tyrannosaurs rex               —are some of the most familiar dinosaurs of all. A surge of recent discoveries has helped clarify some aspects of their evolution, but competing phylogenetic hypotheses raise questions about their relationships, biogeography and fossil record quality. We present a new phylogenetic dataset, which merges published datasets and incorporates recently discovered taxa. We analyze it with parsimony and, for the first time for a tyrannosauroid dataset, Bayesian techniques. The parsimony and Bayesian results are highly congruent and provide a framework for interpreting the biogeography and evolutionary history of tyrannosauroids. Our phylogenies illustrate that the body plan of the colossal species evolved piecemeal, imply no clear division between northern and southern species in western North America as had been argued and suggest that               T. rex               may have been an Asian migrant to North America. Over-reliance on cranial shape characters may explain why published parsimony studies have diverged and filling three major gaps in the fossil record holds the most promise for future work.},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\BLWMU8ZM\\Brusatte and Carr - 2016 - The phylogeny and evolutionary history of tyrannos.pdf}
 }
 
 @article{brusatteSuperiorityCompetitionOpportunism2008,
@@ -2030,6 +2064,25 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\9YPMLNAX\\Ezcurra - 2010 - Biogeography of Triassic tetrapods evidence for p.pdf}
 }
 
+@article{farlowBodySizeOverlap2002,
+  title = {Body {{Size Overlap}}, {{Habitat Partitioning}} and {{Living Space Requirements}} of {{Terrestrial Vertebrate Predators}}: {{Implications}} for the {{Paleoecology}} of {{Large Theropod Dinosaurs}}},
+  shorttitle = {Body {{Size Overlap}}, {{Habitat Partitioning}} and {{Living Space Requirements}} of {{Terrestrial Vertebrate Predators}}},
+  author = {Farlow, James O. and Planka, Eric R.},
+  date = {2002-03-01},
+  journaltitle = {Historical Biology},
+  volume = {16},
+  number = {1},
+  pages = {21--40},
+  publisher = {{Taylor \& Francis}},
+  issn = {0891-2963},
+  doi = {10.1080/0891296031000154687},
+  url = {https://doi.org/10.1080/0891296031000154687},
+  urldate = {2023-06-08},
+  abstract = {Ecological studies of extant tetrapod predators indicate that morphologically similar species which coexist in the same habitats routinely reduce interspecific competition for food by regular spacing of body size. The biggest predator species in the assemblage often differ more from one another in size than the smallest species. When coexisting carnivore species do not differ greatly in size, they commonly show morphological differences related to prey handling that may reduce dietary overlap. If carnivore species are very similar in both size and morphology, competition is avoided by habitat partitioning. Two tyrannosaurid species from the late Campanian Dinosaur Park Formation of western Canada are similar in both size and morphology, suggesting that they were segregated on the basis of habitat and/or biogeographic province. However; consideration of the living-space requirements of predator species of such large body size suggests that this kind of spatial separation would only have been possible had tyrannosaurids been more like ectotherms than endotherms in their metabolic rates. Distribution of different large theropod species across different, and surprisingly small (for the size of the animals) portions of Mesozoic landscapes may also account for the remarkably high diversity of morphologically similar large theropods in other dinosaur faunas.},
+  keywords = {!!!,Body size,Dinosaur Park Formation,Dinosaurs,Ecology,Hutchinsonian ratio,Paleocology,Theropods,to-read,Tyrannosaurids},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\P3RIX2XN\\Farlow and Planka - 2002 - Body Size Overlap, Habitat Partitioning and Living.pdf}
+}
+
 @article{farlowDragonsLandscapeModeling,
   title = {“{{Dragons}}” on the Landscape: {{Modeling}} the Abundance of Large Carnivorous Dinosaurs of the {{Upper Jurassic Morrison Formation}} ({{USA}}) and the {{Upper Cretaceous Dinosaur Park Formation}} ({{Canada}})},
   shorttitle = {“{{Dragons}}” on the Landscape},
@@ -2521,6 +2574,24 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\W9YJ2WT7\\Herraiz et al. - 2020 - Use of nursery areas by the extinct megatooth shar.pdf}
 }
 
+@article{hollandStratigraphyMassExtinction2015,
+  title = {The Stratigraphy of Mass Extinction},
+  author = {Holland, Steven M. and Patzkowsky, Mark E.},
+  date = {2015},
+  journaltitle = {Palaeontology},
+  volume = {58},
+  number = {5},
+  pages = {903--924},
+  issn = {1475-4983},
+  doi = {10.1111/pala.12188},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/pala.12188},
+  urldate = {2023-06-05},
+  abstract = {Patterns of last occurrences of fossil species are often used to infer the tempo and timing of mass extinction, even though last occurrences generally precede the time of extinction. Numerical simulations with constant extinction demonstrate that last occurrences are not randomly distributed, but tend to cluster at subaerial unconformities, surfaces of forced regression, flooding surfaces and intervals of stratigraphical condensation, all of which occur in predictable stratigraphical positions. This clustering arises not only from hiatuses and non-deposition, but also from changes in water depth. Simulations with intervals of elevated extinction cause such clusters of last occurrences to be enhanced within and below the interval of extinction, suggesting that the timing and magnitude of extinctions in these instances could be misinterpreted. With the possible exception of the end-Cretaceous, mass extinctions in the fossil record are characterized by clusters of last occurrences at these sequence stratigraphical horizons. Although these clusters of last occurrences may represent brief pulses of elevated extinction, they are equally likely to form by stratigraphical processes during a protracted period (more than several hundred thousand years) of elevated extinction rate. Geochemical proxies of extinction causes are also affected similarly, suggesting that many local expressions of mass extinction should be re-evaluated for the timing of extinction and its relation to environmental change. We propose three tests for distinguishing pulses of extinction from clusters of last occurrences produced by stratigraphical processes.},
+  langid = {english},
+  keywords = {!!,extinction,modelling,sequence stratigraphy,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\8BRF3SD5\\Holland and Patzkowsky - 2015 - The stratigraphy of mass extinction.pdf;C\:\\Users\\ericr\\Zotero\\storage\\S9XX7UBQ\\pala.html}
+}
+
 @article{holtzTheropodGuildStructure2021,
   title = {Theropod Guild Structure and the Tyrannosaurid Niche Assimilation Hypothesis: Implications for Predatory Dinosaur Macroecology and Ontogeny in Later {{Late Cretaceous Asiamerica1}}},
   shorttitle = {Theropod Guild Structure and the Tyrannosaurid Niche Assimilation Hypothesis},
@@ -2831,6 +2902,23 @@
   keywords = {Dinosaur bones,Dinosaur Park Formation,Feeding behaviour,Theropod tooth marks,to-read}
 }
 
+@article{janickeSexualSelectionSexual2021,
+  title = {Sexual Selection and Sexual Size Dimorphism in Animals},
+  author = {Janicke, Tim and Fromonteil, Salomé},
+  date = {2021-09-15},
+  journaltitle = {Biology Letters},
+  volume = {17},
+  number = {9},
+  pages = {20210251},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rsbl.2021.0251},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsbl.2021.0251},
+  urldate = {2023-06-06},
+  abstract = {Sexual selection is often considered as a critical evolutionary force promoting sexual size dimorphism (SSD) in animals. However, empirical evidence for a positive relationship between sexual selection on males and male-biased SSD received mixed support depending on the studied taxonomic group and on the method used to quantify sexual selection. Here, we present a meta-analytic approach accounting for phylogenetic non-independence to test how standardized metrics of the opportunity and strength of pre-copulatory sexual selection relate to SSD across a broad range of animal taxa comprising up to 95 effect sizes from 59 species. We found that SSD based on length measurements was correlated with the sex difference in the opportunity for sexual selection but showed a weak and statistically non-significant relationship with the sex difference in the Bateman gradient. These findings suggest that pre-copulatory sexual selection plays a limited role for the evolution of SSD in a broad phylogenetic context.},
+  keywords = {!!!,Bateman gradient,body size,body weight,opportunity for selection,sexual selection,sexual size dimorphism,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\2RSTJB28\\Janicke and Fromonteil - 2021 - Sexual selection and sexual size dimorphism in ani.pdf}
+}
+
 @article{janisScalingReproductiveTurnover1991,
   title = {Scaling of Reproductive Turnover in Archosaurs and Mammals: Why Are Large Terrestrial Mammals so Rare?},
   shorttitle = {Scaling of Reproductive Turnover in Archosaurs and Mammals},
@@ -2952,6 +3040,26 @@
   abstract = {Socio-sexual selection is predicted to be an important driver of evolution, influencing speciation, extinction and adaptation. The fossil record provides a means of testing these predictions, but detecting its signature from morphological data alone is difficult. There are, nonetheless, some specific patterns of growth and variation which are expected of traits under socio-sexual selection. The distinctive parietal-squamosal frill of ceratopsian dinosaurs has previously been suggested as a socio-sexual display trait, but evidence for this has been limited. Here, we perform a whole-skull shape analysis of an unprecedentedly large sample of specimens of Protoceratops andrewsi using a high-density landmark-based geometric morphometric approach to test four predictions regarding a potential socio-sexual signalling role for the frill. Three predictions—low integration with the rest of the skull, significantly higher rate of change in size and shape during ontogeny, and higher morphological variance than other skull regions—are supported. One prediction, sexual dimorphism in shape, is not supported, suggesting that sexual differences in P. andrewsi are likely to be small. Together, these findings are consistent with mutual mate choice or selection for signalling quality in more general social interactions, and support the hypothesis that the frill functioned as a socio-sexual signal in ceratopsian dinosaurs.},
   keywords = {!!!,dinosauria,evolution,geometric morphometrics,socio-sexual selection,to-read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\GD6L5YXW\\Knapp et al. - 2021 - Three-dimensional geometric morphometric analysis .pdf}
+}
+
+@article{knellSexualSelectionPrehistoric2013,
+  title = {Sexual Selection in Prehistoric Animals: Detection and Implications},
+  shorttitle = {Sexual Selection in Prehistoric Animals},
+  author = {Knell, Robert J. and Naish, Darren and Tomkins, Joseph L. and Hone, David W. E.},
+  date = {2013-01-01},
+  journaltitle = {Trends in Ecology \& Evolution},
+  shortjournal = {Trends in Ecology \& Evolution},
+  volume = {28},
+  number = {1},
+  pages = {38--47},
+  issn = {0169-5347},
+  doi = {10.1016/j.tree.2012.07.015},
+  url = {https://www.sciencedirect.com/science/article/pii/S0169534712001875},
+  urldate = {2023-06-08},
+  abstract = {Many fossil animals bear traits such as crests or horns that probably functioned as sexually selected signals or weapons. Interpretations of these structures as functioning in mate choice or intrasexual contests are often controversial, with interpretations based on biomechanics or physiology being favoured by many. Although testing hypotheses based on sexual selection can be difficult, especially given that there is no single, reliable means of recognising sexual selection, we argue that it is not impossible; indeed, there are now several cases where sexual selection is strongly supported. In other cases, a careful study of features such as sexual dimorphism, ontogeny, and allometry, coupled with testing of alternative hypotheses, will be necessary to distinguish between possible explanations for exaggerated features.},
+  langid = {english},
+  keywords = {!!!,crest,exaggerated trait,fossil,horn,ornament,prehistoric,sexual selection,to-read,weapon},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\G3ZFN89V\\S0169534712001875.html}
 }
 
 @article{kochLateQuaternaryExtinctions2006,
@@ -3610,6 +3718,24 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\NQUBZM6A\\Naish and Cau - 2022 - The osteology and affinities of Eotyrannus lengi, .pdf;C\:\\Users\\ericr\\Zotero\\storage\\K89QRGA3\\12727.html}
 }
 
+@article{nawrotStratigraphicSignaturesMass2018,
+  title = {Stratigraphic Signatures of Mass Extinctions: Ecological and Sedimentary Determinants},
+  shorttitle = {Stratigraphic Signatures of Mass Extinctions},
+  author = {Nawrot, Rafał and Scarponi, Daniele and Azzarone, Michele and Dexter, Troy A. and Kusnerik, Kristopher M. and Wittmer, Jacalyn M. and Amorosi, Alessandro and Kowalewski, Michał},
+  date = {2018-09-12},
+  journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
+  volume = {285},
+  number = {1886},
+  pages = {20181191},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rspb.2018.1191},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2018.1191},
+  urldate = {2023-06-05},
+  abstract = {Stratigraphic patterns of last occurrences (LOs) of fossil taxa potentially fingerprint mass extinctions and delineate rates and geometries of those events. Although empirical studies of mass extinctions recognize that random sampling causes LOs to occur earlier than the time of extinction (Signor–Lipps effect), sequence stratigraphic controls on the position of LOs are rarely considered. By tracing stratigraphic ranges of extant mollusc species preserved in the Holocene succession of the Po coastal plain (Italy), we demonstrated that, if mass extinction took place today, complex but entirely false extinction patterns would be recorded regionally due to shifts in local community composition and non-random variation in the abundance of skeletal remains, both controlled by relative sea-level changes. Consequently, rather than following an apparent gradual pattern expected from the Signor–Lipps effect, LOs concentrated within intervals of stratigraphic condensation and strong facies shifts mimicking sudden extinction pulses. Methods assuming uniform recovery potential of fossils falsely supported stepwise extinction patterns among studied species and systematically underestimated their stratigraphic ranges. Such effects of stratigraphic architecture, co-produced by ecological, sedimentary and taphonomic processes, can easily confound interpretations of the timing, duration and selectivity of mass extinction events. Our results highlight the necessity of accounting for palaeoenvironmental and sequence stratigraphic context when inferring extinction dynamics from the fossil record.},
+  keywords = {!!!,Holocene,mass extinction,sampling bias,sequence stratigraphy,Signor–Lipps effect,stratigraphic palaeobiology,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\9PFPQ5IM\\Nawrot et al. - 2018 - Stratigraphic signatures of mass extinctions ecol.pdf}
+}
+
 @article{nedorezovDynamicsLynxHare2016,
   title = {The Dynamics of the Lynx–Hare System: An Application of the {{Lotka}}–{{Volterra}} Model},
   shorttitle = {The Dynamics of the Lynx–Hare System},
@@ -3854,6 +3980,14 @@
   langid = {english},
   keywords = {!!!,to-read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\RCGVRDBW\\Parry et al. - 2022 - Surveying the developer experience of flaky tests.pdf}
+}
+
+@online{PDFCensusCanadian,
+  title = {({{PDF}}) {{A Census}} of {{Canadian Dinosaurs}}: More than a Century of Discovery | {{Caleb Brown}} - {{Academia}}.Edu},
+  url = {https://www.academia.edu/24570644/A_Census_of_Canadian_Dinosaurs_more_than_a_century_of_discovery},
+  urldate = {2023-06-08},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\YK55C3KK\\A_Census_of_Canadian_Dinosaurs_more_than_a_century_of_discovery.html}
 }
 
 @incollection{pearlCommentUnderstandingSimpson2022,
@@ -4369,6 +4503,23 @@
   urldate = {2023-03-09},
   abstract = {Extinct lamniform sharks (Elasmobranchii: Lamniformes) are well represented in the late Mesozoic‒Cenozoic fossil record, yet their biology is poorly understood because they are mostly represented only by their teeth. Here, we present measurements taken from specimens of all 13 species of extant macrophagous lamniforms to generate functions that would allow estimations of body, jaw, and dentition lengths of extinct macrophagous lamniforms from their teeth. These quantitative functions enable us to examine the body size distribution of all known macrophagous lamniform genera over geologic time. Our study reveals that small body size is plesiomorphic for Lamniformes. There are four genera that included at least one member that reached {$>$}6 m during both the Mesozoic and Cenozoic, most of which are endothermic. The largest form of the genus Otodus, O. megalodon (‘megatooth shark’) that reached at least 14 m, is truly an outlier considering that all other known macrophagous lamniforms have a general size limit of 7 m. Endothermy has previously been proposed to be the evolutionary driver for gigantism in Lamniformes. However, we contend that ovoviviparous reproduction involving intrauterine cannibalism, a possible synapomorphy of Lamniformes, to be another plausible driver for the evolution of endothermy achieved by certain lamniform taxa.},
   keywords = {!!,Chondrichthyes,Elasmobranchii,fossil record,intrauterine cannibalism,palaeo after dark,to-read,tooth}
+}
+
+@article{shiratsuruWhenDeathComes2023,
+  title = {When Death Comes: Linking Predator–Prey Activity Patterns to Timing of Mortality to Understand Predation Risk},
+  shorttitle = {When Death Comes},
+  author = {Shiratsuru, Shotaro and Studd, Emily K. and Boutin, Stan and Peers, Michael J. L. and Majchrzak, Yasmine N. and Menzies, Allyson K. and Derbyshire, Rachael and Jung, Thomas S. and Krebs, Charles J. and Boonstra, Rudy and Murray, Dennis L.},
+  date = {2023-05-17},
+  journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
+  volume = {290},
+  number = {1999},
+  pages = {20230661},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rspb.2023.0661},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2023.0661},
+  urldate = {2023-06-05},
+  abstract = {The assumption that activity and foraging are risky for prey underlies many predator–prey theories and has led to the use of predator–prey activity overlap as a proxy of predation risk. However, the simultaneous measures of prey and predator activity along with timing of predation required to test this assumption have not been available. Here, we used accelerometry data on snowshoe hares (Lepus americanus) and Canada lynx (Lynx canadensis) to determine activity patterns of prey and predators and match these to precise timing of predation. Surprisingly we found that lynx kills of hares were as likely to occur during the day when hares were inactive as at night when hares were active. We also found that activity rates of hares were not related to the chance of predation at daily and weekly scales, whereas lynx activity rates positively affected the diel pattern of lynx predation on hares and their weekly kill rates of hares. Our findings suggest that predator–prey diel activity overlap may not always be a good proxy of predation risk, and highlight a need for examining the link between predation and spatio-temporal behaviour of predator and prey to improve our understanding of how predator–prey behavioural interactions drive predation risk.},
+  keywords = {!!,diel activity,Lepus americanus,Lynx canadensis,predation risk,predator–prey,time of predation,to-read}
 }
 
 @article{silleroCommonMistakesEcological2021,
