--- a/My Library.bib
+++ b/My Library.bib
@@ -221,6 +221,23 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\B9883G3T\\Barton - 2022 - The “New Synthesis”.pdf}
 }
 
+@article{battistaPostcollectionTaphonomySampling2023,
+  title = {Post-Collection Taphonomy, Sampling Effects and the Role of the Collector in Palaeontological Collections: A Case Study from an Early {{Late Triassic}} Bone Accumulation from Southernmost {{Brazil}}},
+  shorttitle = {Post-Collection Taphonomy, Sampling Effects and the Role of the Collector in Palaeontological Collections},
+  author = {Battista, Francesco and Ribeiro, Ana Maria and Erthal, Fernando and Schultz, Cesar},
+  date = {2023},
+  journaltitle = {Acta Palaeontologica Polonica},
+  shortjournal = {APP},
+  volume = {68},
+  issn = {05677920},
+  doi = {10.4202/app.01050.2022},
+  url = {https://www.app.pan.pl/article/item/app010502022.html},
+  urldate = {2023-06-20},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\E6PGJ7A9\\Battista et al. - 2023 - Post-collection taphonomy, sampling effects and th.pdf}
+}
+
 @inreference{BayesFactor2022,
   title = {Bayes Factor},
   booktitle = {Wikipedia},
@@ -3345,6 +3362,22 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\294QTDQB\\Quantification_of_SSD-libre.pdf}
 }
 
+@article{ludwigSexualDimorphismDinosaurs2023,
+  title = {Sexual Dimorphism in Dinosaurs},
+  author = {Ludwig, Stella A and Smith, Roy E and Ibrahim, Nizar},
+  date = {2023-06-14},
+  journaltitle = {eLife},
+  volume = {12},
+  pages = {e89158},
+  publisher = {{eLife Sciences Publications, Ltd}},
+  issn = {2050-084X},
+  doi = {10.7554/eLife.89158},
+  url = {https://doi.org/10.7554/eLife.89158},
+  urldate = {2023-06-20},
+  abstract = {Studying fossils from a mass-mortality event reveals evidence for sexual dimorphism and, unusually, equal numbers of males and females in a herd of dinosaurs.},
+  keywords = {!!!,3D geometric morphometrics,dinosaurs,intraspecific variability,limb bones,palaeontology,sexual dimorphism,to-read}
+}
+
 @book{lymanVertebrateTaphonomy1994,
   title = {Vertebrate {{Taphonomy}}},
   author = {Lyman, R. Lee and Lyman, Cma},
@@ -4059,6 +4092,24 @@
   langid = {english},
   keywords = {Fossil record,Fossils,Marine ecosystems,Marine fossils,Paleoecology,read,Sharks,Species extinction,Whales},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\NJF4ME95\\Pimiento and Clements - 2014 - When Did Carcharocles megalodon Become Extinct A .pdf;C\:\\Users\\ericr\\Zotero\\storage\\QEM8YVQV\\article.html}
+}
+
+@article{pintoreFemoraExceptionallyLarge2023,
+  title = {Femora from an Exceptionally Large Population of Coeval Ornithomimosaurs Yield Evidence of Sexual Dimorphism in Extinct Theropod Dinosaurs},
+  author = {Pintore, Romain and Cornette, Raphaël and Houssaye, Alexandra and Allain, Ronan},
+  editor = {Ibrahim, Nizar and Rutz, Christian and Benton, Michael},
+  date = {2023-06-13},
+  journaltitle = {eLife},
+  volume = {12},
+  pages = {e83413},
+  publisher = {{eLife Sciences Publications, Ltd}},
+  issn = {2050-084X},
+  doi = {10.7554/eLife.83413},
+  url = {https://doi.org/10.7554/eLife.83413},
+  urldate = {2023-06-20},
+  abstract = {Sexual dimorphism is challenging to detect among fossils due to a lack of statistical representativeness. The Angeac-Charente Lagerstätte (France) represents a remarkable ‘snapshot’ from a Berriasian (Early Cretaceous) ecosystem and offers a unique opportunity to study intraspecific variation among a herd of at least 61 coeval ornithomimosaurs. Herein, we investigated the hindlimb variation across the best-preserved specimens from the herd through 3D Geometric Morphometrics and Gaussian Mixture Modeling. Our results based on complete and fragmented femora evidenced a dimorphism characterized by variations in the shaft curvature and the distal epiphysis width. Since the same features vary between sexes among modern avian dinosaurs, crocodilians, and more distant amniotes, we attributed this bimodal variation to sexual dimorphism based on the extant phylogenetic bracketing approach. Documenting sexual dimorphism in fossil dinosaurs allows a better characterization and accounting of intraspecific variations, which is particularly relevant to address ongoing taxonomical and ecological questions relative to dinosaur evolution.},
+  keywords = {!!,3D geometric morphometrics,dinosaurs,intraspecific variation,limb bones,sexual dimorphism,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\SINI27UX\\Pintore et al. - 2023 - Femora from an exceptionally large population of c.pdf}
 }
 
 @article{purvisPhylogeneticApproachesStudy2008,
