update: statistical rethinking chapter 8

--- a/My Library.bib
+++ b/My Library.bib
@@ -120,7 +120,7 @@
   doi = {10.2307/3647388},
   url = {https://www.jstor.org/stable/3647388},
   urldate = {2022-11-16},
-  keywords = {To Read},
+  keywords = {!!!,to-read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\BGGA4TW8\\Archibald et al. - 2003 - Bayesian Inference of Phylogeny A Non-Technical P.pdf}
 }
 
@@ -3980,6 +3980,21 @@
   langid = {english},
   keywords = {Body dimensions,Crocodylians,Paleobiology,Pebas system,Regression analyses,To Read},
   file = {C\:\\Users\\ericr\\Zotero\\storage\\TNFG6UBG\\S0895981122002589.html}
+}
+
+@report{parkEscapeBehaviorsPrey2023,
+  type = {preprint},
+  title = {Escape Behaviors in Prey and the Evolution of Pennaceous Plumage in Dinosaurs},
+  author = {Park, Jinseok and Son, Minyoung and Park, Jeongyeol and Bang, Sang Yun and Ha, Jungmoon and Moon, Hyungpil and Lee, Yuong-Nam and Lee, Sang-im and Piotr, G. Jablonski},
+  date = {2023-06-01},
+  institution = {{In Review}},
+  doi = {10.21203/rs.3.rs-2998620/v1},
+  url = {https://www.researchsquare.com/article/rs-2998620/v1},
+  urldate = {2023-07-02},
+  abstract = {Abstract           Numerous non-avian dinosaurs possessed pennaceous feathers on their forelimbs (proto-wings) and tail (caudal plumage). Their functions remain unclear. We propose that the pennaceous feathers were used in displays to flush prey through stimulation of sensory-neural escape pathways in prey, and to provide higher speed and maneuverability during pursuits after prey. We evaluated escape behavior of grasshoppers to the hypothetical visual flush-displays by a robotic dinosaur, and neurophysiological responses of grasshoppers’ escape pathway to computer animations of the hypothetical flush-displays by dinosaurs. We confirmed that prey of small dinosaurs might have escaped more often when proto-wings were present, especially distally and with contrasting patterns, and when caudal plumage, especially of large area, was used during the hypothetical flush-displays. The reinforcing loop between flush and pursue functions could have contributed to the evolution of larger and stiffer feathers for faster running, maneuverability, and stronger flush-displays, promoting foraging based on the flush-pursue strategy. The flush-pursue hypothesis can explain the presence and distribution of the pennaceous feathers, plumage color contrasts, as well as a number of other features observed in early pennaraptorans. This scenario highlights that sensory-neural processes underlying prey’s antipredatory reactions may contribute to the origin of major evolutionary innovations in predators.},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\CA7XA3U2\\Park et al. - 2023 - Escape behaviors in prey and the evolution of penn.pdf}
 }
 
 @book{parrishTyrannosauridPaleobiology2013,
