update: added chapter 6 of experimentation for engineers

--- a/My Library.bib
+++ b/My Library.bib
@@ -4127,6 +4127,21 @@
   file = {C\:\\Users\\ericr\\Zotero\\storage\\SINI27UX\\Pintore et al. - 2023 - Femora from an exceptionally large population of c.pdf}
 }
 
+@article{purcellFaunalProvincialityLate2023,
+  title = {Faunal Provinciality in the {{Late Cretaceous Western Interior Seaway}} Using Network Modeling},
+  author = {Purcell, Ceara and Scuderi, Louis and Myers, Corinne},
+  date = {2023-07-05},
+  journaltitle = {Geology},
+  shortjournal = {Geology},
+  issn = {0091-7613},
+  doi = {10.1130/G51255.1},
+  url = {https://doi.org/10.1130/G51255.1},
+  urldate = {2023-07-21},
+  abstract = {The Western Interior Seaway (WIS) was historically divided into latitudinal faunal provinces that were taxonomically distinct from the adjacent Gulf Coastal Plain (GCP) and that shifted in space due to sea-level changes. However, no rigorous quantitative analyses using recent taxonomic updates have reassessed these provinces and their associations. We used network modeling of macroinvertebrate WIS and GCP fauna to test whether biotic provinces existed and to examine their relationships with abiotic change. Results suggest a cohesive WIS unit existed across the Campanian, and distinct WIS and GCP provinces existed in the Maastrichtian. Sea-level changes coincided with changes in network metrics. These results indicate that, while the WIS did not contain subprovinces in the Late Cretaceous, environmental factors influenced faunal associations and their communication over time.},
+  keywords = {!!,to-read},
+  file = {C\:\\Users\\ericr\\Zotero\\storage\\3XHQH6ZZ\\Purcell et al. - 2023 - Faunal provinciality in the Late Cretaceous Wester.pdf;C\:\\Users\\ericr\\Zotero\\storage\\SKZTJV39\\Faunal-provinciality-in-the-Late-Cretaceous.html}
+}
+
 @article{purvisPhylogeneticApproachesStudy2008,
   title = {Phylogenetic {{Approaches}} to the {{Study}} of {{Extinction}}},
   author = {Purvis, Andy},
